--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="pixastic.core.js"></script>
 <script type="text/javascript" src="actions/invert.js"></script>
-<script type="text/javascript" src="actions/edges.js"></script>
+<script type="text/javascript" src="hog.js"></script>
 </head>
 <body>
 <img src="mit.png" id="myimage"/>
@@ -16,12 +16,13 @@
 $(document).ready(function()
 {
 
-    Pixastic.process(document.getElementById("myimage"), "invert"); 
+Pixastic.process(document.getElementById("myimage"), "invert"); 
 
 var img = new Image();
 img.onload = function() {
-	Pixastic.process(img, "edges", {mono:true,invert:false});
+Pixastic.process(img, "hog", {mono:true,invert:false});
 }
+
 document.body.appendChild(img);
 img.src = "mit.png";
 });
